--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ maven-classpath
 maven-classpath.properties
 .idea/
 *.iml
+.cpcache
+deps.edn
+.nrepl-*
+*.patch
+*.diff
+dependency-reduced-pom.xml
